[package]
name = "Neuroxide"
version = "0.1.0"
edition = "2021"

[lib]
name = "neuroxide"
path = "src/neuroxide/lib.rs"

[[bin]]
name = "neuroxide_main"
path = "src/bin.rs"

[[test]]
name = "neuroxide_test"
path = "test/test.rs"

[[bench]]
name = "neuroxide_bench"
path = "bench/bench.rs"

[dependencies]
num = "0.4.3"
once_cell = "1.19.0"
petgraph = "0.6.5"
rand = "0.8.5"
