[package]
name = "Neuroxide"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "neuroxide"
path = "src/neuroxide/lib.rs"

[[bin]]
name = "neuroxide_main"
path = "src/bin.rs"

[[test]]
name = "neuroxide_test"
path = "test/test.rs"

[[bench]]
name = "neuroxide_bench"
path = "bench/bench.rs"

[dependencies]
approx = "0.5.1"
libc = "0.2.159"
num = "0.4.3"
once_cell = "1.19.0"
petgraph = "0.6.5"
rand = "0.8.5"

[build]
rustflags = ["-L", "native=."]
